fixed widths so it looks better on mobile

--- a/style.css
+++ b/style.css
@@ -417,7 +417,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80%;
+  width: 90%;
   margin: 25px auto;
 }
 
@@ -458,7 +458,7 @@
 }
 
 .commercial-where {
-  width: 75%;
+  width: 85%;
   margin: 35px auto;
 }
 
